--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "redux": "^4.2.0",
     "sass": "^1.54.4",
     "styled-components": "^5.3.5",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
